exports[`Client side render client render after SSR with data should not fetch data 1`] = `
Object {
  "loadAllCompletedCalled": 0,
  "loadDataCount": 0,
  "renderCount": 1,
  "renderProps": Object {
    "actions": Object {
      "refresh": [Function],
    },
    "data": Object {
      "result": "Success!",
    },
    "isCompleted": true,
    "isError": false,
    "isLoaded": true,
    "isLoading": false,
  },
}
`;

exports[`Client side render loads data when props change 1`] = `
Object {
  "loadAllCompletedCalled": 2,
  "loadDataCount": 2,
  "renderCount": 4,
  "renderProps": Object {
    "actions": Object {
      "refresh": [Function],
    },
    "data": Object {
      "result": "Success2!",
    },
    "isCompleted": true,
    "isError": false,
    "isLoaded": true,
    "isLoading": false,
  },
}
`;

exports[`Client side render should ignore completion once component is unmounted 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderCount": 1,
  "renderProps": Object {
    "isCompleted": false,
    "isError": false,
    "isLoaded": false,
    "isLoading": true,
  },
}
`;

exports[`Client side render should pass failure when data load fails 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderCount": 2,
  "renderProps": Object {
    "errorMessage": "Boom!",
    "isCompleted": true,
    "isError": true,
    "isLoaded": false,
    "isLoading": false,
  },
}
`;

exports[`Client side render should pass loaded data once promise resolves 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderCount": 2,
  "renderProps": Object {
    "actions": Object {
      "refresh": [Function],
    },
    "data": Object {
      "result": "Success!",
    },
    "isCompleted": true,
    "isError": false,
    "isLoaded": true,
    "isLoading": false,
  },
}
`;

exports[`Client side render should remove data from redux when unmounted 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderCount": 2,
  "renderProps": Object {
    "actions": Object {
      "refresh": [Function],
    },
    "data": Object {
      "result": "Success!",
    },
    "isCompleted": true,
    "isError": false,
    "isLoaded": true,
    "isLoading": false,
  },
}
`;

exports[`Client side render should start loading data if not loaded 1`] = `
Object {
  "loadAllCompletedCalled": 0,
  "loadDataCount": 1,
  "renderCount": 1,
  "renderProps": Object {
    "isCompleted": false,
    "isError": false,
    "isLoaded": false,
    "isLoading": true,
  },
}
`;
